<resources>
    <string name="app_name">iz4</string>
    <string name="id">Id(Email)</string>
    <string name="psw">Password</string>
    <string name="nick">Nickname</string>
    <string name="name">Name</string>
    <string name="cbh">"Cho Beonghyeon "</string>
    <string name="jjw">Jang JaeWon</string>
    <string name="hjj">Hwang JinJu</string>
    <string name="psg">Park SeongSu</string>
    <string name="age">Age</string>
    <string name="mbti">MBTI</string>
    <string name="status">Status Message</string>
    <string name="inputid">Emailadderss/ex:aa@aa.com</string>
    <string name="inputpsw">Password</string>
    <string name="inputname">Name</string>
    <string name="inputmbti">MBTI</string>
    <string name="inputnick">Nickname</string>
    <string name="inputstatus">Status Message</string>
    <string name="inputtitle">Title</string>
    <string name="inputcontent">Detail</string>
    <string name="login">Login</string>
    <string name="exit">End</string>
    <string name="signup">Join</string>
    <string name="check">Double Check</string>
    <string name="save">Save</string>
    <string name="welcome">\tWelcome.</string>
    <string name="MyTv_review">(2/3 days) Review of a 4-day, 3-night safari vacation trip with family</string>
    <string name="MyTv_review2">(Day 3/4) The dog that became our family</string>
    <string name="MyTv_Today2">Duck\'s Information</string>
    <string name="Tv_MyPgDt">MyPageDetail</string>
    <string name="MyAbility">MyAbility</string>
    <string name="MyIb_AddMemo">Save</string>
    <string name="MyTv_MyTtl">" Please enter the subject."</string>
    <string name="MyEt_MyStt">" Month/Day: Please write a brief description."</string>
    <string name="MyEt_MyDt">Please enter your details.</string>
    <string name="MyPage_MyPageTTL">MyPage</string>
    <string name="MyPage_MyPage">MyPage</string>
    <array name="bamin1">
        <item>@drawable/odung_smile</item>
        <item>@drawable/woman_phone</item>
    </array>
    <string name="inputage">Age</string>
    <string name="MyTv_Today">Duck\'s Information</string>
    <string name="EdIt_IdError">Please enter a valid email address.</string>
    <string name="Available_Email">This is a usable ID (e-mail).</string>
    <string name="EdIt_PwError">Enter the correct password. (At least 1 number and 1 English letter/more than 8 characters in total).</string>
    <string name="Dlc_Email">Duplicate ID (e-mail) exists.</string>
    <string name="Pl_Id">Please enter your ID (e-mail).</string>
    <string name="No_Info">There is information that has not been entered.</string>
    <string name="You_Login">You are logged in.</string>
    <string name="Pl_Pw">Please enter the correct password.</string>
    <string name="Pl_IdPw">Please check your ID (email)/password.</string>
    <string name="TL">Team Leader</string>
    <string name="TM">Team Member</string>
    <string name="INFP">INFP</string>
    <string name="ENFP">ENFP</string>
    <string name="ESFJ">ESFJ</string>
    <string name="Wlll">wallalaloo</string>
    <string name="GoForIt">go for it!</string>
    <string name="Hello">hello!</string>
    <string name="IWYW">I wish you well!</string>
    <string name="W_Recruitment">"We are recruiting new employees with an annual salary of 1 billion. Please contact us quickly before hiring!"</string>
    <string name="A_Family">A family-like company Recruiting new employees. It\'a lifetime job. Please apply a lot!!!</string>
    <string name="S_eniors">Seniors at each Samsung affiliate provide training for juniors. Applicants are accepted on a first-come, first-served basis!!!</string>
    <string name="Not_InFo">There is information that has not been entered.</string>
    <string name="PL_URL">Please enter the URL.</string>
    <string name="Check">check</string>
    <string name="CCllt">cancellation</string>
    <string name="Pg_ID">"ID: "</string>
    <string name="Pg_NAME">"Name: "</string>
    <string name="Pg_AGE">"Age: "</string>
    <string name="Pg_MBTI">"MBTI: "</string>
    <string name="MyDt_SAVED">Saved.</string>
    <string name="BTN_BTN">Button</string>
    <string name="MAIN_MMR">MEMBER</string>
    <string name="MAIN_CMU">COMMUNICATION</string>
    <string name="TEST">Test area</string>
    <string name="LOGIN_IZ_FOUR">IZ * FOUR</string>
    <string name="FRIEND_IZ_FOUR">Friend IZ * FOUR</string>
    <string name="SUP_IZ_FOUR">Sign up IZ * FOUR</string>
    <string name="MY_PAGE_IZ_FOUR">My Page IZ * FOUR</string>
    <string name="My_Ability_IZ_FOUR">My Ability IZ * FOUR</string>
    <string name="DEEP_DTL">Detail</string>
    <string name="TET_PGSS">progress</string>
    <string name="TET_DDL">deadline</string>
    <string name="TAP">Team A project</string>
    <string name="TBP">Team B project</string>
    <string name="TCP">Team C project</string>
    <string name="TA">Test area</string>
    <string name="TT_EDIT">Edit</string>
    <string name="TT_ARSS">Add progress</string>
    <string name="TT_PRSS">Progress</string>
    <string name="TT_SM">Save memo</string>
    <string name="TT_SN">Share notes</string>
    <string name="TT_PLN">Please leave a note.</string>
    <string name="TOEDIT_CLICK_IMAGE">\tTo edit\nClick on the image</string>
    <string name="SA_PTTN">[a-zA-Z0-9._-]+@[a-z]+\.+[a-z]+</string>
</resources>