<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/women" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/SUP_IZ_FOUR"
        android:textColor="@color/Blue600"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scr"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/suIdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/id"
                android:textColor="@color/Blue600"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/idLinear"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">


                <EditText
                    android:id="@+id/suIdEditView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="3"

                    android:hint="@string/inputid"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btncheck"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@drawable/btn_text"
                    android:background="@drawable/btn_shape"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/check"
                    android:textSize="10sp"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/suNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/Blue600"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/suNameEditView"
                app:layout_constraintStart_toStartOf="@+id/suNameEditView" />

            <EditText
                android:id="@+id/suNameEditView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/inputname"
                android:inputType="text"

                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idLinear" />

            <TextView
                android:id="@+id/suPwTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psw"
                android:textColor="@color/Blue600"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/suPwEditView"
                app:layout_constraintStart_toStartOf="@+id/suPwEditView" />

            <EditText
                android:id="@+id/suPwEditView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="32dp"
                android:hint="@string/inputpsw"
                android:inputType="textPassword"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/suNameEditView" />

            <TextView
                android:id="@+id/suAgeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/Blue600"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/suAgeEditView"
                app:layout_constraintStart_toStartOf="@+id/suAgeEditView" />

            <EditText
                android:id="@+id/suAgeEditView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/inputage"
                android:inputType="text"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/suPwEditView" />

            <TextView
                android:id="@+id/suMbtiTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mbti"
                android:textColor="@color/Blue600"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/suMbtiEditView"
                app:layout_constraintStart_toStartOf="@+id/suMbtiEditView" />

            <EditText
                android:id="@+id/suMbtiEditView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/inputmbti"
                android:inputType="text"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/suAgeEditView" />

            <Button
                android:id="@+id/subtnjoin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="30dp"
                android:text="@string/signup"
                android:textColor="@drawable/btn_text"
                android:background="@drawable/btn_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/suMbtiEditView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>