<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyPageDetail2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mypgdt2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:elevation="10dp">

                <ImageButton
                    android:id="@+id/ib_back3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="25dp"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:onClick="click"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="?attr/homeAsUpIndicator" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Tv_MyPgDt"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/btn_addmemo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:text="@string/MyIb_AddMemo"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_zzslp2"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/round"
                    android:clipToOutline="true"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/zz" />

                <EditText
                    android:id="@+id/et_today2"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="25dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/MyTv_MyTtl"
                    android:text=""
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_puppy2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/mypagedetail_stroke"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/xuan_nguyen_zr0benrnvgq_unsplash_768x512_1" />

            <EditText
                android:id="@+id/et_stt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/MyEt_MyStt"
                android:text=""
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/et_story2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/MyEt_MyDt"
                android:text=""
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>